--- a/index.html
+++ b/index.html
@@ -1,1 +1,262 @@
-"Hello World!" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>Kulina Frontend</title>
+  <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/styles.css">
+	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+
+</head>
+<body>
+  <div class="image-container container-fluid">
+    <nav class="navbar navbar-expand-sm fixed-top">
+      <div class="navbar-header">
+        <div class="navbar-brand">
+          <img src="img/kulina-logo-white.svg">
+        </div>
+        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+          <div class="navbar-toggler-icon">
+            <div class="menu-icon"></div>
+            <div class="menu-icon"></div>
+            <div class="menu-icon"></div>
+          </div>
+        </button>
+      </div>
+      <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+        <ul class="nav navbar-nav navbar-right font-menu">
+          <li class="nav-item">
+            <div class="nav-link">About Us</div>
+          </li>
+          <li class="nav-item">
+            <div class="nav-link" style="font-weight: bold;">Careers</div>
+          </li>
+          <li class="nav-item">
+            <div class="nav-link">Internship</div>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div> 
+  <div class="container-fluid">
+    <div class="crop">
+      <img src="img/image.jpg">
+    </div>
+    <div class="crop image-container image-text centered">
+      <h1>Join an Impactful Company</h1>
+    </div>
+    <div class="row text-box">
+      <div class="col-sm-4">
+        <h2>What We Do</h2>
+      </div>
+      <div class="col-sm-8 font-grey">
+        Kulina's mission is to "serve the best meal with an outstanding customer experience at the lowest possible price every single day". We want to be customer's default meal option by providing quality product with on-time delivery. We help customers save time and money for each meal they get from us, so they can better spend it on other things that matter.
+        <br><br>
+        We took pride in being the first food tech startup to join "Google Launchpad Accelerator" in San Francisco, and the only one from Indonesia in winter 2018. Our startup is backed by the same inverstor who invested in Ele.me (China's unicorn food delivery startup).
+        <br><br>
+        Join us in our mission to delivering best meals to ten millions of Jakartans. Hurry! Be part of our Kulinas family.
+      </div>
+    </div>
+    <div class="row bg-grey text-box">
+      <div class="col-sm-4">
+        <h2>Explore Opportunities</h2>
+      </div>
+      <div class="col-sm-8">
+        <div class="job-box flex-column">
+          <div class="row">
+            <div class="col-sm-9">
+              <div class="job-text">
+                Frontend Developer
+              </div>
+              <div class="font-grey">
+                Engineer · Fulltime · Yogyakarta
+              </div>
+            </div>
+            <div class="col-sm-3">
+              <button type="button" class="btn orange-button">
+                Apply
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="job-box flex-column">
+          <div class="row">
+            <div class="col-sm-9">
+              <div class="job-text">
+                Mobile Developer
+              </div>
+              <div class="font-grey">
+                Engineer · Fulltime · Yogyakarta
+              </div>
+            </div>
+            <div class="col-sm-3">
+              <button type="button" class="btn orange-button">
+                Apply
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="job-box flex-column">
+          <div class="row">
+            <div class="col-sm-9">
+              <div class="job-text">
+                Backend Developer / Senior Backed Developer
+              </div>
+              <div class="font-grey">
+                Engineer · Fulltime · Yogyakarta
+              </div>
+            </div>
+            <div class="col-sm-3">
+              <button type="button" class="btn orange-button">
+                Apply
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="job-box flex-column">
+          <div class="row">
+            <div class="col-sm-9">
+              <div class="job-text">
+                Data Analyst
+              </div>
+              <div class="font-grey">
+                Data · Fulltime · Jakarta
+              </div>
+            </div>
+            <div class="col-sm-3">
+              <button type="button" class="btn orange-button">
+                Apply
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="job-box flex-column">
+          <div class="row">
+            <div class="col-sm-9">
+              <div class="job-text">
+                VP/Director of Logistics
+              </div>
+              <div class="font-grey">
+                Logistic · Fulltime · Jakarta
+              </div>
+            </div>
+            <div class="col-sm-3">
+              <button type="button" class="btn orange-button">
+                Apply
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="job-box flex-column">
+          <div class="row">
+            <div class="col-sm-9">
+              <div class="job-text">
+                Logistic Manager
+              </div>
+              <div class="font-grey">
+                Logistic · Fulltime · Jakarta
+              </div>
+            </div>
+            <div class="col-sm-3">
+              <button type="button" class="btn orange-button">
+                Apply
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="job-box flex-column">
+          <div class="row">
+            <div class="col-sm-9">
+              <div class="job-text">
+                Logistic Associate
+              </div>
+              <div class="font-grey">
+                Logistic · Fulltime · Jakarta
+              </div>
+            </div>
+            <div class="col-sm-3">
+              <button type="button" class="btn orange-button">
+                Apply
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="job-box flex-column">
+          <div class="row">
+            <div class="col-sm-9">
+              <div class="job-text">
+                VP/Director of Meal Experience
+              </div>
+              <div class="font-grey">
+                Meal Experience · Fulltime · Jakarta
+              </div>
+            </div>
+            <div class="col-sm-3">
+              <button type="button" class="btn orange-button">
+                Apply
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="job-box flex-column">
+          <div class="row">
+            <div class="col-sm-9">
+              <div class="job-text">
+                VP/Director of Engineering
+              </div>
+              <div class="font-grey">
+                Engineer · Fulltime · Yogyakarta
+              </div>
+            </div>
+            <div class="col-sm-3">
+              <button type="button" class="btn orange-button">
+                Apply
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="job-box flex-column">
+          <div class="row">
+            <div class="col-sm-9">
+              <div class="job-text">
+                Chief Technology Officer
+              </div>
+              <div class="font-grey">
+                Engineer · Fulltime · Yogyakarta
+              </div>
+            </div>
+            <div class="col-sm-3">
+              <button type="button" class="btn orange-button">
+                Apply
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="bg-grey footer-box">
+    <hr style="background-color:#FDFDFD;">
+    <footer>
+      <div class="row">
+        <div class="col-sm-5">
+          <div class="font-grey font-footer">
+            Made with <font color=#FF4444>&#10084;</font> from Indonesia. © Kulina, 2018. All rights reserved.
+          </div>
+        </div>
+        <div class="col-sm-7">
+          <div class="font-grey font-footer">
+            Follow kami
+            <img src="img/facebook-logo.png" id="logo" style="height:25px;width:25px;">
+            <img src="img/facebook-logo.png" id="logo" style="height:25px;width:25px;">
+            <img src="img/facebook-logo.png" id="logo" style="height:25px;width:25px;">
+            <img src="img/facebook-logo.png" id="logo" style="height:25px;width:25px;">
+            <img src="img/facebook-logo.png" id="logo" style="height:25px;width:25px;">
+          </div>
+        </div>
+      </div>
+    </footer>
+  </div>
+</body>
+</html>
