--- a/index.html
+++ b/index.html
@@ -249,10 +249,10 @@
           <div class="font-grey font-footer">
             Follow kami
             <img src="img/facebook-logo.png" id="logo" style="height:25px;width:25px;">
-            <img src="img/facebook-logo.png" id="logo" style="height:25px;width:25px;">
-            <img src="img/facebook-logo.png" id="logo" style="height:25px;width:25px;">
-            <img src="img/facebook-logo.png" id="logo" style="height:25px;width:25px;">
-            <img src="img/facebook-logo.png" id="logo" style="height:25px;width:25px;">
+            <img src="img/twitter-logo.png" id="logo" style="height:25px;width:25px;">
+            <img src="img/linkedin-logo.png" id="logo" style="height:25px;width:25px;">
+            <img src="img/instagram-logo.png" id="logo" style="height:25px;width:25px;">
+            <img src="img/line-logo.png" id="logo" style="height:25px;width:25px;">
           </div>
         </div>
       </div>
