Edited menu icon in navbar

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 <body>
   <div class="image-container container-fluid">
     <nav class="navbar navbar-expand-sm fixed-top">
-      <div class="navbar-header">
+      <div class="navbar-header navbar-expand-sm">
         <div class="navbar-brand">
           <img src="img/kulina-logo-white.svg">
         </div>
-        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-          <div class="navbar-toggler-icon">
-            <div class="menu-icon"></div>
-            <div class="menu-icon"></div>
-            <div class="menu-icon"></div>
-          </div>
-        </button>
       </div>
+      <button class="navbar-toggler justify-content-end" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <div>
+          <div class="menu-icon"></div>
+          <div class="menu-icon"></div>
+          <div class="menu-icon"></div>
+        </div>
+      </button>
       <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
         <ul class="nav navbar-nav navbar-right font-menu">
           <li class="nav-item">
