--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
           </div>
         </div>
         <div class="col-sm-7">
-          <div class="font-grey font-footer">
+          <div class="follow-text font-grey font-footer">
             Follow kami
             <img src="img/facebook-logo.png" id="logo" style="height:25px;width:25px;">
             <img src="img/twitter-logo.png" id="logo" style="height:25px;width:25px;">
